--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "App\\": "App/",
             "Cmd\\": "Cmd/"
 	  }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.2"
     }
 }
