--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "symfony/symfony": "^4.3",
         "tylx/laravel-component": "dev-master",
-        "jasny/sso": "^0.3.0"
+        "jasny/sso": "^0.3.0",
+        "nikic/fast-route": "^1.3",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
