--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "tylx/laravel-component": "dev-master",
         "jasny/sso": "^0.3.0",
         "nikic/fast-route": "^1.3",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "workerman/workerman": "^3.5"
     },
     "autoload": {
         "psr-4": {
