--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
         "jasny/sso": "^0.3.0",
         "nikic/fast-route": "^1.3",
         "predis/predis": "^1.1",
-        "workerman/workerman": "^3.5"
+        "workerman/workerman": "^3.5",
+        "react/react": "^1.0",
+        "multilinguals/apollo-client": "^0.1.2",
+        "vlucas/phpdotenv": "^4.1"
     },
     "autoload": {
         "psr-4": {
