--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,21 @@
         "tylx/laravel-component": "dev-master",
         "jasny/sso": "^0.3.0",
         "nikic/fast-route": "^1.3",
-        "predis/predis": "^1.1",
         "workerman/workerman": "^3.5",
         "react/react": "^1.0",
         "multilinguals/apollo-client": "^0.1.2",
-        "vlucas/phpdotenv": "^4.1"
+        "vlucas/phpdotenv": "^4.1",
+        "hyperf/rate-limit": "^1.1",
+        "google/protobuf": "^3"
     },
     "autoload": {
         "psr-4": {
             "App\\": "App/",
-            "Cmd\\": "Cmd/"
+            "Cmd\\": "Cmd/",
+            "GPBMetadata\\":"GPBMetadata/",
+            "Mail\\":"Mail/",
+            "Grpc\\":"Grpc/",
+            "Helloworld\\":"Helloworld/"
 	  }
     },
     "require-dev": {
