--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "multilinguals/apollo-client": "^0.1.2",
         "vlucas/phpdotenv": "^4.1",
         "hyperf/rate-limit": "^1.1",
-        "google/protobuf": "^3"
+        "google/protobuf": "^3",
+        "codeception/codeception": "*"
     },
     "autoload": {
         "psr-4": {
@@ -17,7 +18,9 @@
             "Cmd\\": "Cmd/",
             "GPBMetadata\\":"GPBMetadata/",
             "Mail\\":"Mail/",
+            "Service\\":"Service/",
             "Grpc\\":"Grpc/",
+            "GrpcClient\\":"GrpcClient/",
             "Helloworld\\":"Helloworld/"
 	  }
     },
