--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,36 @@
         "jasny/sso": "^0.3.0",
         "nikic/fast-route": "^1.3",
         "workerman/workerman": "^3.5",
+        "openzipkin/zipkin": "^1.2.2",
         "react/react": "^1.0",
         "multilinguals/apollo-client": "^0.1.2",
         "vlucas/phpdotenv": "^4.1",
         "hyperf/rate-limit": "^1.1",
         "google/protobuf": "^3",
         "codeception/codeception": "*",
-        "kosinix/grafika": "dev-master"
+        "kosinix/grafika": "dev-master",
+        "monolog/monolog": "^1.23",
+        "guzzlehttp/guzzle": "^6.3",
+        "doctrine/annotations": "^1.10",
+        "smarty/smarty": "^3.1",
+        "mtdowling/cron-expression": "v1.2.3",
+        "predis/predis": "*",
+        "php": ">=7.1.0",
+        "voku/anti-xss": "^4.1",
+        "league/pipeline": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "App/",
+            "App\\Annotation\\": "App/Annotation/",
             "Cmd\\": "Cmd/",
             "GPBMetadata\\":"GPBMetadata/",
             "Mail\\":"Mail/",
             "Service\\":"Service/",
             "Grpc\\":"Grpc/",
             "GrpcClient\\":"GrpcClient/",
-            "Helloworld\\":"Helloworld/"
+            "Helloworld\\":"Helloworld/",
+            "Framework\\": "src/Framework"
 	  }
     },
     "require-dev": {
