--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "monolog/monolog": "^1.23",
         "guzzlehttp/guzzle": "^6.3",
         "doctrine/annotations": "^1.10",
+        "nikic/php-parser": "^4.1",
         "smarty/smarty": "^3.1",
         "mtdowling/cron-expression": "v1.2.3",
         "predis/predis": "*",
