--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
         "jasny/sso": "^0.3.0",
         "nikic/fast-route": "^1.3",
         "workerman/workerman": "^3.5",
-        "openzipkin/zipkin": "^1.2.2",
         "react/react": "^1.0",
         "multilinguals/apollo-client": "^0.1.2",
         "vlucas/phpdotenv": "^4.1",
@@ -22,23 +21,29 @@
         "predis/predis": "*",
         "php": ">=7.1.0",
         "voku/anti-xss": "^4.1",
-        "league/pipeline": "^1.0"
+        "league/pipeline": "^1.0",
+        "robmorgan/phinx": "^0.12.1",
+        "jcchavezs/zipkin-opentracing": "^0.1.3",
+        "php-amqplib/php-amqplib": "^2.10"
+
     },
     "autoload": {
         "psr-4": {
             "App\\": "App/",
             "App\\Annotation\\": "App/Annotation/",
             "Cmd\\": "Cmd/",
-            "GPBMetadata\\":"GPBMetadata/",
-            "Mail\\":"Mail/",
-            "Service\\":"Service/",
-            "Grpc\\":"Grpc/",
-            "GrpcClient\\":"GrpcClient/",
-            "Helloworld\\":"Helloworld/",
+            "GPBMetadata\\": "GPBMetadata/",
+            "Mail\\": "Mail/",
+            "Service\\": "Service/",
+            "Grpc\\": "Grpc/",
+            "GrpcClient\\": "GrpcClient/",
+            "Helloworld\\": "Helloworld/",
             "Framework\\": "src/Framework"
-	  }
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
