--- a/docker/elk/logstash/logstash.conf
+++ b/docker/elk/logstash/logstash.conf
@@ -24,7 +24,7 @@ remove_field => [ "timestamp" ]
 }
 output {
 elasticsearch {
-hosts => "192.168.99.88:9200"
+hosts => "elasticsearch:9200"
 manage_template => false
 index => "%{[@metadata][beat]}-%{[type]}-%{+YYYY.MM.dd}"
 document_type => "%{[@metadata][type]}"
