--- a/docker/elk/kibana/kibana.yml
+++ b/docker/elk/kibana/kibana.yml
@@ -1,4 +1,4 @@
-elasticsearch.hosts: http://es:9200/
+elasticsearch.hosts: http://elasticsearch:9200/
 server.host: "0.0.0.0"
 server.name: kibana
 elasticsearch.requestTimeout: 90000
