--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,20 @@
         "smarty/smarty": "^3.1",
         "mtdowling/cron-expression": "v1.2.3",
         "predis/predis": "*",
-        "php": ">=7.1.0",
+        "php": ">=7.2.0",
         "voku/anti-xss": "^4.1",
         "league/pipeline": "^1.0",
         "robmorgan/phinx": "^0.12.1",
         "jcchavezs/zipkin-opentracing": "^0.1.3",
-        "php-amqplib/php-amqplib": "^2.10"
+        "php-amqplib/php-amqplib": "^2.10",
+        "swoole/ide-helper": "@dev",
+        "elasticsearch/elasticsearch": "^7.10"
 
     },
     "autoload": {
         "psr-4": {
             "App\\": "App/",
+            "ServerFramework\\": "ServerFramework/",
             "App\\Annotation\\": "App/Annotation/",
             "Cmd\\": "Cmd/",
             "GPBMetadata\\": "GPBMetadata/",
